Fix inconsistent left-align between browsers
Fixes #186.

Polyfilled browsers aren't picking up the proper `[left-align]` styles
due to a bad ::slotted selector.  As a reminder, all ::slotted selectors
MUST have the immediate parent of the slot element to their left.

--- a/components/byu-menu/byu-menu.scss
+++ b/components/byu-menu/byu-menu.scss
@@ -111,7 +111,7 @@
 }
 
 :host([left-align]) {
-  ::slotted(*) {
+  .outer-nav ::slotted(*) {
     @include navItemsSlottedSetWidth();
   }
 }
